# zvonok-test-assignment

./: Makefile  README.md  pyproject.toml  setup.cfg
tests/: test_time_stats.py
tests/fixtures/: input.txt  output.txt
zvonok_test_assignment/: cli.py  time_stats.py
zvonok_test_assignment/scripts/: main.py
